# telephonk

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md  STM32F411.svd  STM32F411CEUx_FLASH.ld  arm-gnu-toolchain.cmake  format-check.ps1  format.ps1  phone.ioc
.github/workflows/: ci.yml
Drivers/: CMakeLists.txt
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f411xe.h  stm32f4xx.h  system_stm32f4xx.h
Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
Drivers/RTT/: CMakeLists.txt
Drivers/RTT/inc/: SEGGER_RTT.h  SEGGER_RTT_Conf.h
Drivers/RTT/src/: SEGGER_RTT.c  SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_printf.c
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_pwr.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.h  stm32f4xx_hal_tim.h  stm32f4xx_hal_tim_ex.h  stm32f4xx_ll_bus.h  stm32f4xx_ll_cortex.h  stm32f4xx_ll_dma.h  stm32f4xx_ll_exti.h  stm32f4xx_ll_gpio.h  stm32f4xx_ll_pwr.h  stm32f4xx_ll_rcc.h  stm32f4xx_ll_system.h  stm32f4xx_ll_tim.h  stm32f4xx_ll_usart.h  stm32f4xx_ll_utils.h
Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_flash_ramfunc.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_pwr.c  stm32f4xx_hal_pwr_ex.c  stm32f4xx_hal_rcc.c  stm32f4xx_hal_rcc_ex.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c  stm32f4xx_ll_dma.c  stm32f4xx_ll_exti.c  stm32f4xx_ll_gpio.c  stm32f4xx_ll_rcc.c  stm32f4xx_ll_usart.c  stm32f4xx_ll_utils.c
Inc/: main.h  shrek.h  shrek.txt  stm32_assert.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscall.c
